--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-makerpass",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A library to conveniently access the MakerPass API",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "dependencies": {
     "axios": "^0.9.1",
     "curry": "^1.2.0"
+  },
+  "devDependencies": {
+    "tape": "^4.4.0"
   }
 }
